Added var mockup to template, allowing for header and footers that match the website

--- a/libs/base/ie.less
+++ b/libs/base/ie.less
@@ -1,11 +1,11 @@
 .ie8 {
-    min-width: 800px; // Stops the whole page getting really weird
+ 	min-width: 800px; // Stops the whole page getting really weird
 
 	input[type=password] {
 	    // Fix a strange bug in IE8 where the * come out as boxes with a custom font
 	    font-family: sans-serif;
 	}
-    
+
 	.mega-menu {
 	    border: 1px solid  @blue-navigation;
 	    border-top: 6px solid @blue-navigation;
@@ -17,5 +17,9 @@
 			top: 25% !important;
 			border-width: 0 !important;
 		}
+	}
+
+	.cookie-monster {
+	    background: @blue-lighter !important;
 	}
 }
