--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -38,32 +38,6 @@ html
 			a.screenreader.screenreader--focusable Skip to content
 			a.screenreader.screenreader--focusable Skip to footer
 
-		if cookiemonster
-			.cookie-monster.hide-no-cookies.hide-no-js.no-print
-				.cookie-monster__content
-					p This site uses cookies. Find out more about #[a(href="#") our use of cookies].
-					button.btn.cookie-monster__close(data-action="close", type="button") Close
-
-		if loginheader
-
-			aside.section-notice__login
-				h2.screenreader Notice
-				.section-notice__content
-					button.btn.btn-small(type="button") #[a(href="adviser.html") Adviser login]
-
-		if logoutheader
-
-			aside.section-notice__login
-				h2.screenreader Notice
-				.section-notice__content
-					button.btn.btn-small(type="button")  #[a(href="adviser-logged-out.html") Adviser logout]
-
-			header.main-header
-				.main-header__content.main-content
-					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
-						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;", src="assets/images/ca-logo_100px.svg")
-					img.print-only.logo(src="assets/images/ca-logo-hz-280px.svg")
-
 		if mockup
 			header.main-header
 				.main-header__content
@@ -87,8 +61,7 @@ html
 							button.main-header__search__submit(title="Search", type="submit")
 								i.icon-search.icon--no-text
 								span.screenreader Search
-			
-			// Mega Menu
+								
 			nav.main-nav(data-track-zone="main-nav", style="overflow: visible;")
 				ul.nav-list-primary
 					li.top-item.js-mega-menu(style="display: list-item;")
@@ -119,8 +92,30 @@ html
 						a(href="#") More
 							i.icon-down
 
-		else
+		else if cookiemonster
+			.cookie-monster.hide-no-cookies.hide-no-js.no-print
+				.cookie-monster__content
+					p This site uses cookies. Find out more about #[a(href="#") our use of cookies].
+					button.btn.cookie-monster__close(data-action="close", type="button") Close
 
+		else if loginheader
+			aside.section-notice__login
+				h2.screenreader Notice
+				.section-notice__content
+					button.btn.btn-small(type="button") #[a(href="adviser.html") Adviser login]
+
+		else if logoutheader
+			aside.section-notice__login
+				h2.screenreader Notice
+				.section-notice__content
+					button.btn.btn-small(type="button")  #[a(href="adviser-logged-out.html") Adviser logout]
+			header.main-header
+				.main-header__content.main-content
+					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
+						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;", src="assets/images/ca-logo_100px.svg")
+					img.print-only.logo(src="assets/images/ca-logo-hz-280px.svg")
+		
+		else
 			header.main-header
 				.main-header__content.main-content
 					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
