Largely IE8 fixes

--- a/libs/modules/footer.less
+++ b/libs/modules/footer.less
@@ -20,7 +20,7 @@
 
 .main-footer__content {
     .limit-width(@max-page-width);
-    max-width: @breakpoint-lg;
+    //max-width: @breakpoint-lg;
 }
 
 .main-footer__box {
