--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -120,6 +120,10 @@ input.main-header__search__input {
         display: table;
         width: 100%;
         background: @heritage-blue;
+        a {
+            border: none;
+            color: @white;
+        }
      }
      
      html[lang="en-SCT"] .main-header__links {
