Moved main-content ie8 rule into ie document

--- a/libs/base/ie.less
+++ b/libs/base/ie.less
@@ -22,4 +22,8 @@
 	.cookie-monster {
 	    background: @blue-lighter !important;
 	}
+
+	.main-content__right {
+		.spacing(padding-right,@box-spacing*6);
+	}
 }
