Changed print only section to div in template for ie8

--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -149,7 +149,7 @@ html
 							span.title__title #{title}
 					block content
 
-				section.print-only
+				.print-only
 					h2 This section is print only
 
 		if mockup
