Update mixin for collapsible

--- a/libs/mixins/revealable.less
+++ b/libs/mixins/revealable.less
@@ -7,7 +7,7 @@
 .revealable (
         @revealable-background: @heritage-blue-lighter;
         @revealable-heading: @text-color;
-        @revealable-border: darken(@revealable-background, 25%)
+        @revealable-border: @heritage-blue-light
     ) {
 
     margin: @box-spacing-vertical 0;
