--- a/libs/modules/revealable.less
+++ b/libs/modules/revealable.less
@@ -12,20 +12,24 @@
 
     &--aqua {
         .revealable( 
+            @aqua-light,
+            @text-color,
             @aqua
         ) 
     }
 
     &--green {
         .revealable( 
-            @green-light, 
-            @green
+            @green-lighter,
+            @text-color,
+            @green-light
         ) 
     }
 
     &--red {
         .revealable( 
             @red-lighter,
+            @text-color,
             @red
         ) 
     }
