--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -25,10 +25,13 @@
 .side-nav-beta {
     .main-content__sidebar;
     .spacing(margin,0,0,@box-spacing,0);
+    //border: 1px solid @gray-5;
+    //.spacing(border-top-width,.5);
     
     ul {
         list-style: none;
         padding: 0;
+        margin-bottom: 0;
     }
     li {
         padding: 0;
@@ -40,7 +43,6 @@
             display: block;
             border-bottom: none;
         }
-
     }
 
     &__heading {
@@ -49,7 +51,7 @@
         &.-open {
             display: block;
         }
-        >a {
+        > a {
             color: @heritage-blue;
             font-weight: @font-weight-boldest;
             font-size: @font-size-medium;
@@ -62,6 +64,15 @@
         }
         &:hover {
             background-color: @gray-8;
+        }
+        .section {
+            color: @heritage-blue;
+            font-weight: @font-weight-boldest;
+            //font-size: @font-size-medium;
+            background-color: @gray-8;
+            &:hover {
+                background-color: @heritage-blue-lightest;
+            }
         }
     }
     .-current {
