Added new mixin for sibling category sidebar (so it can have unique styling)

--- a/libs/jade/mockup.jade
+++ b/libs/jade/mockup.jade
@@ -20,9 +20,7 @@ block sidebar
 		{title: "Problems with home improvements"}
 		],0)
 	- var section = "Sibling categories"
-	.callout--related.side-nav-beta
-		p X
-	+sidebar([
+	+sidebarSiblings([
 		{title: "Sibling two", href: "#"},
 		{title: "Sibling three", href: "#"},
 		{title: "Sibling four", href: "#"},
