--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -23,7 +23,7 @@
 	.callout( 
 		@green-lighter, 
 		@green
-	); 
+	);
 	.callout--border--left;
     &.callout--icon {
         .callout--icon("\f00c\00a0 Correct");
@@ -36,7 +36,7 @@
 .highlight--error {
 	.callout( 
 		@red-lightest,
-		@red,
+		@text-color,
         @callout-border: @red
 	); 
 	.callout--border--left;
