--- a/libs/modules/revealable.less
+++ b/libs/modules/revealable.less
@@ -24,7 +24,11 @@
             @text-color,
             @green-light
         ) 
+        )
     }
+    &--green h2 {
+        color: green;
+    } 
 
     &--red {
         .revealable( 
