--- a/public/css/site.css
+++ b/public/css/site.css
@@ -8639,6 +8639,7 @@ html[lang="en-SCT"] .main-nav {
 .dap-panel--crucial > h3,
 .highlight--error > h3 {
   color: #DF3034;
+  color: #191926;
   font-size: 1.3rem;
 }
 .callout--warning a,
@@ -9736,6 +9737,7 @@ html[lang="en-SCT"] .main-nav {
   background-color: #FFF;
   color: #191926;
   border: solid #3a958c;
+  border: solid #81CEC6;
   border-width: 1px 1px 0px 0.5rem;
 }
 .collapsible--aqua i.revealable__icon,
@@ -9757,11 +9759,13 @@ html[lang="en-SCT"] .main-nav {
   text-decoration: none;
   position: relative;
   background-color: #81CEC6;
+  background-color: #b8e3df;
   color: #191926;
   font-size: 1rem;
   font-weight: 600;
   line-height: 1.5;
   border-bottom: 1px solid #3a958c;
+  border-bottom: 1px solid #81CEC6;
 }
 .collapsible--aqua .collapse-toggle h1,
 .revealable--aqua .collapse-toggle h1,
@@ -9828,6 +9832,7 @@ html[lang="en-SCT"] .main-nav {
   border: none;
   margin-top: 1rem;
   border-bottom: 1px solid #3a958c;
+  border-bottom: 1px solid #81CEC6;
   text-align: right;
 }
 .collapsible--aqua .collapse-toggle-close:before,
@@ -9850,6 +9855,7 @@ html[lang="en-SCT"] .main-nav {
 .collapsible--aqua__close:hover,
 .revealable--aqua__close:hover {
   background-color: rgba(129, 206, 198, 0.2);
+  background-color: rgba(184, 227, 223, 0.2);
 }
 .collapsible--aqua .open:after,
 .revealable--aqua .open:after,
@@ -9877,6 +9883,7 @@ html[lang="en-SCT"] .main-nav {
   background-color: #FFF;
   color: #191926;
   border: solid #78b541;
+  border: solid #b9db9b;
   border-width: 1px 1px 0px 0.5rem;
 }
 .collapsible--green i.revealable__icon,
@@ -9899,10 +9906,13 @@ html[lang="en-SCT"] .main-nav {
   position: relative;
   background-color: #b9db9b;
   color: #537D2D;
+  background-color: #d3e8c1;
+  color: #191926;
   font-size: 1rem;
   font-weight: 600;
   line-height: 1.5;
   border-bottom: 1px solid #78b541;
+  border-bottom: 1px solid #b9db9b;
 }
 .collapsible--green .collapse-toggle h1,
 .revealable--green .collapse-toggle h1,
@@ -9930,6 +9940,7 @@ html[lang="en-SCT"] .main-nav {
 .revealable--green__heading h6 {
   margin-top: 0;
   color: #537D2D;
+  color: #191926;
 }
 .collapsible--green .collapse-toggle:after,
 .revealable--green .collapse-toggle:after,
@@ -9965,10 +9976,12 @@ html[lang="en-SCT"] .main-nav {
   text-decoration: none;
   position: relative;
   color: #537D2D;
+  color: #191926;
   cursor: pointer;
   border: none;
   margin-top: 1rem;
   border-bottom: 1px solid #78b541;
+  border-bottom: 1px solid #b9db9b;
   text-align: right;
 }
 .collapsible--green .collapse-toggle-close:before,
@@ -9991,6 +10004,7 @@ html[lang="en-SCT"] .main-nav {
 .collapsible--green__close:hover,
 .revealable--green__close:hover {
   background-color: rgba(185, 219, 155, 0.2);
+  background-color: rgba(211, 232, 193, 0.2);
 }
 .collapsible--green .open:after,
 .revealable--green .open:after,
@@ -10012,12 +10026,17 @@ html[lang="en-SCT"] .main-nav {
 .revealable--green .revealable__content[aria-hidden=true] {
   display: none;
 }
+.collapsible--green h2,
+.revealable--green h2 {
+  color: green;
+}
 .collapsible--red,
 .revealable--red {
   margin: 0.75rem 0;
   background-color: #FFF;
   color: #191926;
   border: solid #e13d41;
+  border: solid #DF3034;
   border-width: 1px 1px 0px 0.5rem;
 }
 .collapsible--red i.revealable__icon,
@@ -10040,10 +10059,12 @@ html[lang="en-SCT"] .main-nav {
   position: relative;
   background-color: #f2acad;
   color: #DF3034;
+  color: #191926;
   font-size: 1rem;
   font-weight: 600;
   line-height: 1.5;
   border-bottom: 1px solid #e13d41;
+  border-bottom: 1px solid #DF3034;
 }
 .collapsible--red .collapse-toggle h1,
 .revealable--red .collapse-toggle h1,
@@ -10071,6 +10092,7 @@ html[lang="en-SCT"] .main-nav {
 .revealable--red__heading h6 {
   margin-top: 0;
   color: #DF3034;
+  color: #191926;
 }
 .collapsible--red .collapse-toggle:after,
 .revealable--red .collapse-toggle:after,
@@ -10106,10 +10128,12 @@ html[lang="en-SCT"] .main-nav {
   text-decoration: none;
   position: relative;
   color: #DF3034;
+  color: #191926;
   cursor: pointer;
   border: none;
   margin-top: 1rem;
   border-bottom: 1px solid #e13d41;
+  border-bottom: 1px solid #DF3034;
   text-align: right;
 }
 .collapsible--red .collapse-toggle-close:before,
@@ -13014,4 +13038,3 @@ span[id*="overlay_button"] {
     padding-left: 1em;
   }
 }
-/*# sourceMappingURL=site.css.map */
