Added smooth.js for smooth scrolling, and included it into template

--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -31,6 +31,7 @@ html
 		script(src="../libs/javascript/beta-dap-accordion.js")
 		script(src="../libs/javascript/collapse.js")
 		script(src="../libs/vendors/prism/prism.js")
+		script(src="../libs/javascript/smooth.js")
 
 	body
 		<!--[if IE 8]><div class="ie8"><![endif]-->
