Additional content mockup

--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -19,8 +19,9 @@ span[id*="overlay_button"] {
 
 .callout--adviser {
     .callout( 
-        @inventive-teal-lightest, 
-        @aqua-light
+        @inventive-teal-lightest,
+        @text-color,
+        @callout-border: @inventive-teal-light
     ); 
     .callout--border; 
     .callout--border--left;
