Update content example

--- a/libs/jade/collapse.jade
+++ b/libs/jade/collapse.jade
@@ -18,14 +18,14 @@ block content
 					.collapse-toggle Unstyled content inside header/toggle
 					.collapse-content
 						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
-						a.collapse-toggle-close Close button
+						a.collapse-toggle-close Close
 			pre
 				code.language-html
 					| &lt;div class="collapse collapsible"&gt;
 					| 	&lt;div class="collapse-toggle"&gt;Unstyled content inside header/toggle&lt;/div&gt;
 					| 	&lt;div class="collapse-content"&gt;
 					| 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-					| 		&lt;a class="collapse-toggle-close"&gt;Close button&lt;/a&gt;
+					| 		&lt;a class="collapse-toggle-close"&gt;Close&lt;/a&gt;
 					| 	&lt;/div&gt;
 					| &lt;/div&gt;
 
@@ -34,23 +34,23 @@ block content
 					.collapse-toggle Collapses can be grouped
 					.collapse-content
 						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
-						a.collapse-toggle-close Close button
+						a.collapse-toggle-close Close
 					.collapse-toggle Collapses can be grouped
 					.collapse-content
 						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
-						a.collapse-toggle-close Close button
+						a.collapse-toggle-close Close
 			pre
 				code.language-html
 					| &lt;div class="collapse collapsible--aqua"&gt;
 					| 	&lt;div class="collapse-toggle"&gt;Collapses can be grouped&lt;/div&gt;
 					| 	&lt;div class="collapse-content"&gt;
 					| 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-					| 		&lt;a class="collapse-toggle-close"&gt;Close button&lt;/a&gt;
+					| 		&lt;a class="collapse-toggle-close"&gt;Close&lt;/a&gt;
 					| 	&lt;/div&gt;
 					| 	&lt;div class="collapse-toggle"&gt;Collapses can be grouped&lt;/div&gt;
 					| 	&lt;div class="collapse-content"&gt;
 					| 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-					| 		&lt;a class="collapse-toggle-close"&gt;Close button&lt;/a&gt;
+					| 		&lt;a class="collapse-toggle-close"&gt;Close&lt;/a&gt;
 					| 	&lt;/div&gt;
 					| &lt;/div&gt;
 
@@ -61,7 +61,7 @@ block content
 						p Heading toggle can also contain formatted html.
 					.collapse-content
 						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
-						a.collapse-toggle-close Close button
+						a.collapse-toggle-close Close
 			pre
 				code.language-html
 					| &lt;div class="collapse collapsible--green"&gt;
@@ -71,7 +71,7 @@ block content
 					| 	&lt;/div&gt;
 					| 	&lt;div class="collapse-content"&gt;
 					| 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-					| 		&lt;a class="collapse-toggle-close"&gt;Close button&lt;/a&gt;
+					| 		&lt;a class="collapse-toggle-close"&gt;Close&lt;/a&gt;
 					| 	&lt;/div&gt;
 					| &lt;/div&gt;
 
@@ -80,14 +80,14 @@ block content
 					.collapse-toggle Unstyled content inside header/toggle
 					.collapse-content
 						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
-						a.collapse-toggle-close Close button
+						a.collapse-toggle-close Close
 			pre
 				code.language-html
 					| &lt;div class="collapse collapsible--red"&gt;
 					| 	&lt;div class="collapse-toggle"&gt;Unstyled content inside header/toggle&lt;/div&gt;
 					| 	&lt;div class="collapse-content"&gt;
 					| 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-					| 		&lt;a class="collapse-toggle-close"&gt;Close button&lt;/a&gt;
+					| 		&lt;a class="collapse-toggle-close"&gt;Close&lt;/a&gt;
 					| 	&lt;/div&gt;
 					| &lt;/div&gt;
 
@@ -97,7 +97,7 @@ block content
 					h3#heading-one.revealable__heading(aria-controls="revealable-1", aria-expanded="true", tabindex="0", title="Expand section") Heading one
 					div#revealable-1.revealable__content(aria-expanded="false", aria-hidden="false")
 						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
-						a.revealable__close(href="#") Close button
+						a.revealable__close(href="#") Close
 					h3#heading-two.revealable__heading(aria-controls="revealable-2", aria-expanded="false", tabindex="0", title="Expand section") Heading two
 			pre
 				code.language-html
@@ -105,7 +105,7 @@ block content
 					| 	&lt;h3 id="heading-one" aria-controls="revealable-1" aria-expanded="true" tabindex="0" title="Expand section" class="revealable__heading"&gt;Heading one&lt;/h3&gt;
 					| 	&lt;div id="revealable-1" aria-expanded="false" aria-hidden="false" class="revealable__content"&gt;
 					| 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-					| 		&lt;a href="#" class="revealable__close"&gt;Close button&lt;/a&gt;
+					| 		&lt;a href="#" class="revealable__close"&gt;Close&lt;/a&gt;
 					| 	&lt;/div&gt;
 					| 	&lt;h3 id="heading-two" aria-controls="revealable-2" aria-expanded="false" tabindex="0" title="Expand section" class="revealable__heading"&gt;Heading two&lt;/h3&gt;
 					| &lt;/section&gt;
