--- a/libs/jade/content.jade
+++ b/libs/jade/content.jade
@@ -95,7 +95,7 @@ block content
                     p Open Monday to Friday, 8am to 6pm
                     p Calls are free from landlines and from mobiles.
                     p It should take about 20 minutes to complete the call. If you’d prefer someone else to call for you that’s fine, but you need to be with them so that you can give permission for them to speak for you.
-                    a.collapse-toggle-close Close button
+                    a.collapse-toggle-close Close
 
             .collapse.collapsible
                 .collapse-toggle I want to apply by post
@@ -107,15 +107,9 @@ block content
                     p Wolverhampton 
                     p WV99 1AH
 
-                    a.collapse-toggle-close Close button
-            .callout--related
-                h3 Next steps
-                p The DWP will assess whether you meet the basic eligibility conditions.
-                p If you do, they’ll send you a PIP claim form. This form is where you tell them how your condition affects you. If you’ve waited more than 2 weeks, contact the PIP claims line and ask them for an update.
-                p While you wait for the PIP2 form, you should think about #[a(href="#") how to fill in the PIP claim form] and if you need to organise any #[a(href="#") supporting evidence] to support your claim.
-                p If you don’t meet the basic eligibility conditions, you’ll be sent a decision letter to say why you’ve been refused. If you think the decision is wrong, you can #[a(href="#") challenge the DWP’s decision].
+                    a.collapse-toggle-close Close
 
-            .callout--adviser
+            .callout--adviser.callout--icon
                 h3 Information for advisers
                 p The PIP2 form is sometimes called ‘How your condition affects you’ form
                 ul
@@ -125,3 +119,10 @@ block content
                 p Case law: #[a(href="#") Unlawful delays in processing a PIP claim and the High Court’s decision]
                 p Power of attorney: #[a(href="#") making decisions for someone who lacks mental capacity]
                 p #[a(href="#") Appointees and benefit claims]
+
+            .callout--related
+                h3 Next steps
+                p The DWP will assess whether you meet the basic eligibility conditions.
+                p If you do, they’ll send you a PIP claim form. This form is where you tell them how your condition affects you. If you’ve waited more than 2 weeks, contact the PIP claims line and ask them for an update.
+                p While you wait for the PIP2 form, you should think about #[a(href="#") how to fill in the PIP claim form] and if you need to organise any #[a(href="#") supporting evidence] to support your claim.
+                p If you don’t meet the basic eligibility conditions, you’ll be sent a decision letter to say why you’ve been refused. If you think the decision is wrong, you can #[a(href="#") challenge the DWP’s decision].
